--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ constantly==15.1.0
 coverage==7.2.7
 cron-descriptor==1.2.35
 cryptography==39.0.0
+Cython==3.0.9
 cytoolz==0.11.2
 daphne==4.0.0
 distlib==0.3.6
