--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,27 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
 amqp==5.1.1
 APScheduler==3.6.3
 asgiref==3.5.2
+asttokens==2.4.1
 async-generator==1.10
 async-timeout==4.0.2
 atomicwrites==1.4.0
-attrs==21.4.0
+attrs==23.2.0
 autobahn==23.1.1
 Automat==22.10.0
 billiard==3.6.4.0
-black==23.3.0
+bitarray==2.9.2
+black==24.2.0
 cachetools==4.2.2
+cbor2==5.6.2
 celery==5.2.7
-certifi==2022.9.24
+certifi==2024.2.2
 cffi==1.15.1
 channels==4.0.0
 channels-redis==4.0.0
-charset-normalizer==2.0.12
-click==8.0.3
+charset-normalizer==3.3.2
+click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
@@ -26,8 +31,9 @@ coverage==7.2.7
 cron-descriptor==1.2.35
 cryptography==39.0.0
 Cython==3.0.9
-cytoolz==0.11.2
+cytoolz==0.12.3
 daphne==4.0.0
+dataclassy==0.11.1
 distlib==0.3.6
 dj-database-url==2.1.0
 Django==3.2.8
@@ -37,59 +43,84 @@ django-timezone-field==5.0
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.5.0
+eip712==0.2.4
 emoji==2.2.0
-eth-hash==0.3.2
-eth-keys==0.3.4
-eth-typing==2.2.2
-eth-utils==1.10.0
+eth-account==0.10.0
+eth-brownie==1.20.2
+eth-event==1.2.5
+eth-hash==0.6.0
+eth-keyfile==0.7.0
+eth-keys==0.5.0
+eth-rlp==1.0.1
+eth-typing==3.5.2
+eth-utils==2.3.1
+eth_abi==5.0.0
 exceptiongroup==1.1.0
-execnet==1.9.0
+execnet==2.0.2
 filelock==3.9.0
-frozenlist==1.3.0
+frozenlist==1.4.1
 h11==0.14.0
-hexbytes==0.2.2
+hexbytes==0.3.1
 hyperlink==21.0.0
-idna==3.3
+hypothesis==6.27.3
+idna==3.6
+importlib-metadata==7.0.1
 incremental==22.10.0
-iniconfig==1.1.1
+iniconfig==2.0.0
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 kombu==5.2.4
+lazy-object-proxy==1.10.0
+lru-dict==1.2.0
 msgpack==1.0.4
-multidict==6.0.2
-mypy-extensions==0.4.3
+multidict==6.0.5
+mypy-extensions==1.0.0
 netaddr==0.8.0
 outcome==1.2.0
-packaging==23.0
-parsimonious==0.8.1
-pathspec==0.9.0
+packaging==23.2
+parsimonious==0.9.0
+pathspec==0.12.1
 Pillow==9.4.0
 pipenv==2023.2.4
-platformdirs==2.4.1
-pluggy==1.0.0
-prompt-toolkit==3.0.38
+platformdirs==4.2.0
+pluggy==1.4.0
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.8
 psycopg2==2.9.5
 py==1.11.0
+py-solc-ast==1.2.10
+py-solc-x==1.1.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
-pycryptodome==3.14.1
+pycryptodome==3.20.0
+Pygments==2.17.2
+pygments-lexer-solidity==0.7.0
 PyJWT==1.7.1
 pyOpenSSL==23.0.0
 pyparsing==3.0.6
 PySocks==1.7.1
 pytest==6.2.5
-pytest-forked==1.4.0
-pytest-xdist==2.5.0
+pytest-forked==1.6.0
+pytest-xdist==1.34.0
 python-crontab==2.7.1
 python-dateutil==2.8.2
-python-dotenv==1.0.0
+python-dotenv==0.16.0
 python-telegram-bot==13.14
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
+pyunormalize==15.1.0
+pywin32==306
+PyYAML==6.0.1
 redis==4.4.2
-requests==2.28.1
-rlp==2.0.1
+referencing==0.33.0
+regex==2023.12.25
+requests==2.31.0
+rlp==4.0.0
+rpds-py==0.18.0
 selenium==4.8.0
+semantic-version==2.10.0
 service-identity==21.1.0
 six==1.16.0
 sniffio==1.3.0
@@ -98,22 +129,30 @@ sqlparse==0.4.2
 stripe==5.4.0
 toml==0.10.2
 tomli==1.2.3
-toolz==0.11.1
+toolz==0.12.1
 tornado==6.1
+tqdm==4.66.2
 trio==0.22.0
 trio-websocket==0.9.2
 Twisted==22.10.0
+twisted-iocpsupport==1.0.2
 txaio==23.1.1
-typing_extensions==4.0.1
+typing_extensions==4.9.0
 tzdata==2022.6
 tzlocal==4.2
-urllib3==1.26.9
+urllib3==2.2.1
 varint==1.0.2
 vine==5.0.0
 virtualenv==20.17.1
 virtualenv-clone==0.5.7
 virtualenvwrapper-win==1.2.7
-wcwidth==0.2.6
+vvm==0.1.0
+vyper==0.3.10
+wcwidth==0.2.13
+web3==6.15.1
+websockets==12.0
+wrapt==1.16.0
 wsproto==1.2.0
+yarl==1.9.4
+zipp==3.17.0
 zope.interface==5.5.2
-wheel==0.43.0
